# Metaspesa

./: .env.example  .gitignore  AGENTS.md  compose.observability.prod.yaml  compose.observability.yaml  compose.prod.yaml  compose.yaml
.claude/: CLAUDE.md  settings.local.json
.github/agents/: senior-python-developer.md
.github/workflows/: lint.yaml  pass-unit-test.yml  publish-images.yaml
client/: .dockerignore  .prettierignore  .prettierrc  Dockerfile  eslint.config.mjs  next.config.ts  package-lock.json  package.json  tsconfig.json  vite.config.ts
client/app/: layout.tsx  page.tsx
client/app/shopping/: Product.ts  actions.ts  page.module.css  page.tsx
client/infrastructure/: fake-api-service.ts  grpc-api-service.ts
client/lib/: api-service.ts  domain.ts
client/src/: instrumentation.ts  middleware.ts  proxy.ts
client/src/app/: globals.css  layout.tsx
client/src/infrastructure/: fake-api-service.ts  grpc-api-service.ts  grpc-auth-mapper.ts  grpc-auth-service.ts  grpc-client-factory.ts  grpc-config.ts  grpc-market-api-service.ts  grpc-market-mapper.ts  grpc-metadata.ts  grpc-response-guards.ts  grpc-shopping-mapper.ts
client/src/lib/: api-service.ts  auth-domain.ts  auth-errors.ts  auth-messages.ts  auth-service.ts  domain.ts  market-api-service.ts  market-contracts.ts  market-messages.ts  messages.ts  search-params.ts  shopping-list-view-model.ts
client/test/: auth-errors.test.ts  component-smoke.test.tsx  credentials.test.ts  grpc-auth-mapper.test.ts  grpc-market-mapper.test.ts  grpc-shopping-mapper.test.ts  login-result.test.ts  money-formatter.test.ts  product.test.ts  route-params.test.ts  shopping-list-view-model.test.ts  shopping-list.test.ts  use-paginated-market-products.test.ts
db/init/: 01-grafana-user.sh
docs/: components.puml  domain.puml  schema.dbml  use_cases.puml
docs/use_cases/: record_shopping_list.puml
observability/alloy/: config.alloy
observability/loki/: loki.yaml
observability/mimir/: mimir.yaml
scraper/: Dockerfile  config.yaml  pyproject.toml
scraper/scripts/: generate_grpc_protos.py
scraper/src/: config.py  dependency_injection.py  domain.py  main.py
scraper/src/application/: abstractions.py  app_product_repository.py  clock.py  product_processors.py  use_case.py
scraper/src/application/product_processors/: __init__.py  base.py  brand_extractor.py  brand_simplifier.py  quantity_redundancy_remover.py  string_sanitizer.py
scraper/src/application/use_cases/: __init__.py  retry_failed_saves.py  scrape_markets.py
scraper/src/infrastructure/: app_product_repository.py  local_storage.py  playwright_driver.py  secrets.py  web_driver.py
scraper/src/infrastructure/grpc/: grpc_product_repository.py
scraper/src/infrastructure/grpc/protos/: README.md  auth_service_pb2.py  auth_service_pb2_grpc.py  domain.proto  domain_pb2.py  domain_pb2_grpc.py  market_service.proto  market_service_pb2.py  market_service_pb2_grpc.py
scraper/src/infrastructure/market_scrapers/: alcampo_web_scraper.py  market_names.py  market_web_scraper_factory.py  mercadona_web_scraper.py  product_scroll.py  product_tags.py  product_window_scraper.py  resilience.py
scraper/src/infrastructure/telemetry/: instrumented_playwright_driver.py  otel.py  scraper_telemetry.py
scraper/test/: test_config.py  test_domain.py
scraper/test/application/: conftest.py  test_app_product_repository.py  test_retry_failed_saves_command_handler.py  test_scrape_markets_command_handler.py  test_use_case.py
scraper/test/application/product_processors/: test_brand_extractor.py  test_brand_simplifier.py  test_product_processor_base.py  test_quantity_redundancy_remover.py  test_string_sanitizer.py
scraper/test/infrastructure/: test_local_storage.py  test_market_web_scraper_factory.py  test_secrets.py
scraper/test/infrastructure/grpc/: test_grpc_product_repository.py
scraper/test/infrastructure/market_scrapers/: test_alcampo_product_tag.py  test_mercadona_product_tag.py  test_product_scroll.py  test_product_tag_collection.py  test_retry_policy.py
scrapper/: .dockerignore  .pre-commit-config.yaml  Dockerfile  config.yaml  pyproject.toml  requirements.txt
scrapper/src/: config.py  domain.py  main.py
scrapper/src/application/: abstractions.py  use_case.py
scrapper/src/infrastructure/: local_storage.py  playwright_driver.py
scrapper/src/infrastructure/market_scrappers/: alcampo_web_scrapper.py  market_web_scrapper_factory.py  mercadona_web_scrapper.py
scrapper/src/market_scrappers/: alcampo_scrapper.py  alcampo_web_scrapper.py  market_web_scrapper.py  mercadona_scrapper.py  mercadona_web_scrapper.py  scrapper.py  scrapper_factory.py
scrapper/test/application/: test_use_case.py
scrapper/test/infrastructure/: test_market_web_scrapper_factory.py
scrapper/test/infrastructure/market_scrapers/: test_alcampo_product_tag.py  test_mercadona_product_tag.py
scrapper/test/market_scrappers/: test_scrapper.py  test_scrapper_factory.py
server/: .dockerignore  .editorconfig  Directory.Build.props  Directory.Packages.props  Dockerfile  Metaspesa.slnx
server/src/Application/: Application.csproj  ApplicationDependencyInjection.cs
server/src/Database/: Database.csproj  DatabaseDependencyInjection.cs  MainContext.cs
server/src/Domain/: Domain.csproj
server/src/GrpcApi/: .dockerignore  DependencyInjection.cs  GrpcApi.csproj  Program.cs  appsettings.json
server/src/Infrastructure/: ISecretVault.cs  (+8 more)
(+286 files in other folders)
