[project]
name = "scrapper"
version = "0.1.0"
description = "Background worker for scraping products from different markets."
readme = "./README.md"
requires-python = ">=3.14"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "selenium>=4.41.0",
]

[dependency-groups]
dev = [
    "black>=26.3.1",
    "pre-commit>=4.5.1",
]
