[project]
name = "scrapper"
version = "0.1.0"
description = "Background worker for scraping products from different markets."
readme = "./README.md"
requires-python = ">=3.14"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "selenium>=4.41.0",
]

[dependency-groups]
dev = [
    "pre-commit>=4.5.1",
    "ruff>=0.15.6",
]

[tool.ruff]
line-length = 88

target-version = "py314"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors (standard formatting/syntax errors)
    "F",   # pyflakes (unused variables, undefined names - catches real bugs!)
    "I",   # isort (automatically sorts and groups your imports alphabetically)
    "UP",  # pyupgrade (automatically upgrades older Python syntax to modern 3.14 syntax)
]

ignore = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"